# aigateway

./: .dockerignore  .env.docker  .env.example  .gitignore  1783016181584.md  1783049238070.md  2026-06-27-ai-gateway-design.md  CHANGELOG.md  CLAUDE.md  Dockerfile.frontend  INSTALL.md  README.md  TODOS.md  config.yaml  config.yaml.template  design.md  docker-compose.yml  repomix.config.json
.playwright-cli/: page-2026-06-30T04-27-19-441Z.yml  (+17 more)
aigateway-api/: Dockerfile  pyproject.toml  requirements.txt
aigateway-api/src/aigateway_api/: __init__.py  admin_routes.py  app_state.py  auth_middleware.py  code_rag_routes.py  dispatcher.py  draft_routes.py  main.py  openai_compat.py  rate_limiter.py  routes.py  streaming.py  task_tracker.py  template_routes.py  trace_middleware.py  video_routes.py
aigateway-cli/: pyproject.toml
aigateway-cli/src/aigateway_cli/: __init__.py  __main__.py  __version__.py  chat.py  codegraph.py  run.py  session.py
aigateway-core/: pyproject.toml
aigateway-core/src/aigateway_core/: __init__.py  caching.py  circuit_breaker.py  config.py  context.py  debug_config.py  exceptions.py  integration_configs.py  litellm_bridge.py  logger.py  metrics.py  pipeline.py  plugin_registry.py  qdrant_client.py  redis_client.py  security.py  trace_event.py
aigateway-core/src/aigateway_core/code_rag/: __init__.py  embedding_router.py  graph_builder.py  graph_query.py  splitter.py
aigateway-core/src/aigateway_core/dispatch/: __init__.py  classifier.py  context.py  dispatcher.py  intent_classifier.py  pipeline_engine.py
aigateway-core/src/aigateway_core/generation_optimization/: __init__.py  api_key_groups.py  config.py  metrics.py  models.py
aigateway-core/src/aigateway_core/generation_optimization/plugins/: __init__.py  ai_director_plugin.py  cost_tracker_plugin.py  draft_generator_plugin.py  gen_model_router_plugin.py  intent_evaluator_plugin.py  token_compressor_plugin.py
aigateway-core/src/aigateway_core/generation_optimization/strategies/: __init__.py  ai_director.py  draft_generator.py  feature_cache.py  intent_evaluator.py  model_router.py  prompt_confirmation.py  prompt_template_manager.py  token_compressor.py  video_preview.py
aigateway-core/src/aigateway_core/media/: base.py  cache.py  config.py  detector.py  generation.py  mol.py  plugin.py
aigateway-core/src/aigateway_core/media/pipelines/: __init__.py  audio.py  document.py  image.py  video.py
aigateway-core/src/aigateway_core/pipelines/: __init__.py
aigateway-core/src/aigateway_core/pipelines/generation/: __init__.py  registration.py
aigateway-core/src/aigateway_core/pipelines/understanding/: __init__.py
aigateway-core/src/aigateway_core/plugins/: __init__.py  conv_compressor_plugin.py  rag_retriever_plugin.py
aigateway-core/src/aigateway_core/prefix/: __init__.py  registration.py
aigateway-core/src/aigateway_core/prefix/cache/: __init__.py  cache_keys.py  cache_manager.py  l2_search.py  l3_semantic.py  plugin.py
aigateway-core/src/aigateway_core/prefix/media/: __init__.py  base.py  cache.py  detector.py  generation.py  mol.py  plugin.py  types.py
aigateway-core/src/aigateway_core/prefix/pii/: __init__.py  detector.py  plugin.py
aigateway-core/src/aigateway_core/prefix/plugins/: __init__.py  classic_plugins.py  registration.py
aigateway-core/src/aigateway_core/route/: __init__.py
aigateway-core/src/aigateway_core/shared/: __init__.py  config.py  debug_config.py  exceptions.py  integration_configs.py  logger.py  metrics.py  plugin_registry.py  qdrant_client.py  redis_client.py  trace_event.py  tracing.py
(+284 files in other folders)
