[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aigateway-api"
version = "0.1.0"
description = "AI Gateway API server — FastAPI application with auth, routing, and admin endpoints."
requires-python = ">=3.12,<3.14"
license = "MIT"

dependencies = [
    "aigateway-core>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "litellm>=1.30.0",
    "httpx>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aigateway_api"]
