[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aigateway-cli"
version = "0.1.0"
description = "AI Gateway CLI — interactive chat and single-request command-line tool."
requires-python = ">=3.12,<3.14"
license = "MIT"

dependencies = [
    "httpx>=0.24.0",
    "rich>=13.0.0",
]

[project.scripts]
aigateway = "aigateway_cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aigateway_cli"]
