[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aigateway-core"
version = "0.1.0"
description = "AI Gateway core library — pipeline engine, plugins, media processing, and configuration management."
# 上界 <3.14：paddleocr → paddlepaddle 目前（3.3.1）未发布 cp313/cp314 wheel，
# llama-index-vector-stores-qdrant >=0.2 同样锁 <3.14。放开上界会让 all-integrations 无法安装。
requires-python = ">=3.12,<3.14"
license = "MIT"

dependencies = [
    "pyyaml>=6.0",
    "watchdog>=3.0.0",
    "prometheus-client>=0.20.0",
    "httpx>=0.24.0",
    "redis>=5.0.0",
    "structlog>=23.1.0",
    "lz4>=4.0.0",           # caching.py: L2 Redis 缓存压缩
    "cachetools>=5.0.0",    # caching.py: L1 LRUCache
]

[project.optional-dependencies]
llmlingua = ["llmlingua>=0.2.0"]
clip = ["transformers>=4.30.0", "torch>=2.0.0", "Pillow>=9.0"]
comfyui = ["websockets>=11.0", "httpx>=0.24.0"]
llamaindex = ["llama-index>=0.10.0", "llama-index-vector-stores-qdrant>=0.2.0"]
langchain = ["langchain>=0.1.0", "langchain-openai>=0.0.5"]
paddleocr = ["paddleocr>=2.7.0", "paddlepaddle>=2.5.0"]
unstructured = ["unstructured[all-docs]>=0.12.0"]
all-integrations = [
    "aigateway-core[llmlingua,clip,comfyui,llamaindex,langchain,paddleocr,unstructured]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aigateway_core"]
